<resources>
    <string name="app_name">Buri</string>
    <string name="cd_logo_login">Logo do projeto Buri</string>
    <string name="login_screen_hint_edt_email">Digite seu Email</string>
    <string name="login_screen_hint_edt_password">Digite sua senha</string>
    <string name="login_screen_bt_enter">Entrar</string>
    <string name="login_screen_txt_rv_password">Não tem cadastro ?</string>
    <string name="login_screen_txt_rv_password2">Cadastra-se Já</string>
    <string name="register_screen_hint_edt_name">Digite seu nome</string>
    <string name="register_screen_hint_edt_email">Digite seu email</string>
    <string name="register_screen_switch_is_admin">É administrador?</string>
    <string name="register_screen_bt_enter">Cadastrar</string>
    <string name="cd_image_equipment_icon">Imagem com um circuito e o símbolo do arduino</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_menu_sensors">Sensores</string>
    <string name="title_menu_historical">Histórico</string>
    <string name="title_menu_realtime">Tempo Real</string>
    <string name="home_title">Dispositivos Cadastrados</string>
    <string name="home_content_descrition_add_equipment">Botão de criar dispositivo</string>
    <string name="text_empty_list">Lista Vazia</string>
    <string name="hint_nome">Nome:</string>
    <string name="hint_id">Id:</string>
    <string name="network">Sem internet</string>
    <string name="cd_network">Ícone de não conectado à internet</string>
    <string name="register_equipment">Cadastrar aparelho (Novo)</string>
    <string name="change_owner">Cadastrar aparelho (Novo)</string>
    <string name="sl">Solicita propriedade</string>
    <string name="label_new_Id">ID do novo equipamento :</string>
    <string name="hint_save">Salvar</string>
    <string name="hint_save_equipment">Nome do equipamento</string>
    <string name="id">Id</string>
    <string name="title_air">Umidade do ar (%)</string>
    <string name="title_co">Concentração de CO (ppm)</string>
    <string name="temperature_title7">Temperatura (°C)</string>
    <string name="hint_switch_online">Online</string>
</resources>